--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-edition = "2018"
+edition = "2021"
 name = "the-super-tiny-compiler-in-rust"
 version = "0.0.0"
 
@@ -7,12 +7,14 @@ version = "0.0.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-napi = "1"
-napi-derive = "1"
+# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
+napi = { version = "2.0.0", default-features = false, features = ["napi4"] }
+napi-derive = "2.0.0"
 regex = "1"
 
 [build-dependencies]
-napi-build = "1"
+napi-build = "1.2.0"
 
 [profile.release]
 lto = true
+
